--- a/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
+++ b/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
@@ -29,8 +29,8 @@
   <div class="terminal-content">
     <!-- Informations générales -->
     <div class="terminal-section">
-      <div class="section-wrapper">
-        <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-default)" />
+      <div class="terminal-section-wrapper">
+        <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
         <div class="infos-title">
           <h2>Terminal</h2>
         </div>
@@ -92,8 +92,8 @@
 
     <!-- Soldes des actifs -->
     <div class="terminal-section">
-      <div class="section-wrapper">
-        <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-default)" />
+      <div class="terminal-section-wrapper">
+        <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
         <div class="infos-title">
           <h2>Soldes des actifs</h2>
         </div>
