--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -8,8 +8,8 @@
   </div>
   <div class="terminal-content">
     <div class="terminal-section">
-      <div class="section-wrapper">
-        <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-default)" />
+      <div class="terminal-section-wrapper">
+        <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
         <div class="infos-title">
           <h2>Terminal</h2>
         </div>
