㊙️ feature: BinanceDebugComponent ------------------------------------------------ fix css

--- a/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
+++ b/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
@@ -26,10 +26,10 @@
 
   <!-- Informations du compte -->
   @if (account(); as currentAccount) {
-  <div class="terminal-content">
+  <div class="terminal-main">
     <!-- Informations générales -->
     <div class="terminal-section">
-      <div class="terminal-section-wrapper">
+      <div class="terminal-content">
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
         <div class="infos-title">
           <h2>Terminal</h2>
@@ -92,7 +92,7 @@
 
     <!-- Soldes des actifs -->
     <div class="terminal-section">
-      <div class="terminal-section-wrapper">
+      <div class="terminal-content">
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
         <div class="infos-title">
           <h2>Soldes des actifs</h2>
