--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -6,9 +6,9 @@
   <div class="terminal-details">
     <h2>Terminal console information and commands.</h2>
   </div>
-  <div class="terminal-content">
+  <div class="terminal-main">
     <div class="terminal-section">
-      <div class="terminal-section-wrapper">
+      <div class="terminal-content">
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
         <div class="infos-title">
           <h2>Terminal</h2>
