㊙️ feature: BinanceDebugComponent ------------------------------------------------ modify html: min-height: var(--input-min-height); to bind to component:   inputHeight = "500px"; rectif landing-data.json: to fit and swap to  sidebar-nav

--- a/atkm/src/app/features/binance/components/binance-debug.component.html
+++ b/atkm/src/app/features/binance/components/binance-debug.component.html
@@ -12,6 +12,7 @@
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
         <!-- Step 1: Service injection check -->
         <textarea #ta class="terminal-input" placeholder="Informations générales" [value]="getTerminalText()"
+          [style.--input-min-height]="inputHeight"
           style="height:400px; overflow:auto; scroll-behavior:smooth; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;"></textarea>
 
       </div>
