--- a/atkm/src/styles.css
+++ b/atkm/src/styles.css
@@ -379,6 +379,10 @@ atk-content-main {
   border-bottom: 2px solid var(--color-border-muted);
 }
 
+.sidebar-section:last-child {
+  border-bottom: none;
+}
+
 .sidebar-title {
   width: 100%;
   display: flex;
@@ -555,7 +559,7 @@ atk-content-main {
   color: var(--color-fg-muted);
   font-size: 14px;
   text-align: left;
-  padding: 20px;
+  padding-left: 36px;
 }
 
 
@@ -774,6 +778,7 @@ li,
 }
 
 .terminal-content {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -799,7 +804,9 @@ li,
   min-height: var(--input-min-height);
   height: 100%;
   width: 100%;
-  font-size: 14px;
+  font-size: 1em;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+  scroll-behavior: smooth;
 }
 
 .terminal-input::placeholder {
@@ -813,6 +820,28 @@ li,
   padding-left: 6px;
   line-height: 1.7;
 }
+
+.terminal-status {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  font-size: .6em;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+  position: absolute;
+  color: var(--color-fg-subtle);
+  bottom: 4px;
+  left: 26px;
+}
+
+.input-selection {
+  flex: 1 1 auto;
+  max-width: 50%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 
 .infos-items {
   display: flex;
@@ -967,6 +996,10 @@ li,
 .cmd-btn:hover {
   background: var(--color-btn-hover-bg);
   border-color: var(--color-btn-hover-border);
+}
+
+.cmd-btn:last-child {
+  margin-top: auto;
 }
 
 .cmd-btn-icon {
