--- a/atkm/src/styles.css
+++ b/atkm/src/styles.css
@@ -47,7 +47,7 @@ body {
 }
 
 /* ====================================================================================================== */
-/* FIX========================= FIX POUR LES COMPOSANTS ANGULAR DANS LA GRILLE ========================== */
+/*  FIX POUR LES COMPOSANTS ANGULAR DANS LA GRILLE ====================================================== */
 /* ====================================================================================================== */
 
 router-outlet,
