☑️ feature: ConsoleLogger (2025.09.16.194828) ------------------------------------------------ - refact console-logger.tool.ts - refact console-logger.config.colors.json - refact console-logger.config.symbols.json
------------------------------------------------

--- a/atkm/src/styles.css
+++ b/atkm/src/styles.css
@@ -47,7 +47,7 @@ body {
 }
 
 /* ====================================================================================================== */
-/*  FIX POUR LES COMPOSANTS ANGULAR DANS LA GRILLE ====================================================== */
+/*  TAG: styles.css ================ CONSOLE LOG IN PROGRESS */
 /* ====================================================================================================== */
 
 router-outlet,
